k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: boardgame-api
  namespace: boardgame
  annotations:
    kubernetes.io/ingress.class: gce
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend: { service: { name: boardgame-api, port: { number: 80 } } }
